--- a/src/app/components/contact-form/contact-form.component.css
+++ b/src/app/components/contact-form/contact-form.component.css
@@ -6,16 +6,15 @@ EDIT ON
 body{
   height: 100%; 
   font-family: 'Noto Sans', sans-serif;
-  background-color: #ab4493; 
+  background-color: rgb(8 8 118); 
 }
 
 
 .contact_form{  
   width: 460px; 
   height: auto;
-  margin: 80px auto;
+  margin: auto;
   border-radius: 10px;  
-  padding-top: 30px;
   padding-bottom: 20px;  
   background-color: #fbfbfb; 
   padding-left: 30px; 
@@ -29,7 +28,7 @@ input{
   border-radius: 5px;  
   border-style: solid; 
   border-width: 1px; 
-  border-color: #ab4493; 
+  border-color: rgb(8 8 118); 
   margin-top: 10px;  
   padding-left: 10px;
   margin-bottom: 20px; 
@@ -43,7 +42,7 @@ textarea{
   border-radius: 5px;  
   border-style: solid; 
   border-width: 1px; 
-  border-color: #ab4493; 
+  border-color: rgb(8 8 118); 
   margin-top: 10px;  
   padding-left: 10px;
   margin-bottom: 20px; 
@@ -61,11 +60,12 @@ button{
   height: 45px; 
   padding-left: 5px;
   padding-right: 5px;   
+  padding-top: 8px;
   margin-bottom: 20px; 
   margin-top: 10px;   
   text-transform: uppercase;
-  background-color: #ab4493; 
-  border-color: #ab4493; 
+  background-color: rgb(8 8 118); 
+  border-color: rgb(8 8 118); 
   border-style: solid; 
   border-radius: 10px;  
   width: 420px;   
@@ -79,7 +79,7 @@ button p{
 
 
 span{
-  color: #ab4493; 
+  color: rgb(8 8 118); 
 }
 
 
@@ -93,7 +93,7 @@ h1{
   font-size: 39px;  
   text-align: letf; 
   padding-bottom: 20px; 
-  color: #ab4493;
+  color: rgb(8 8 118);
 }
 
 
