--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,12 +1,14 @@
 <!-- EXPERIENCIA -->
 
 <div id="experiencia" class="card border-dark mb-3" style="max-width: 80rem">
-  <div id="exp-edit">
-    <button class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
-  </div>
-
-  <div id="exp-plus">
-    <button class="betene btn1 hover"><i class="fas fa-plus"></i></button>
+  <div id="exp-plus" *ngIf="AuthService.usuarioLogueado">
+    <button
+      class="betene btn1 hover"
+      data-bs-toggle="modal"
+      data-bs-target="#experienciaModal"
+    >
+      <i class="fas fa-plus"></i>
+    </button>
   </div>
 
   <div id="exp-text" class="card-body text-dark">
@@ -14,6 +16,20 @@
     <div>
       <ul id="education-list" *ngFor="let item of experienciaInfo">
         <li>
+      
+          <div id="exp-delete-edit" *ngIf="AuthService.usuarioLogueado">
+            <button class="betene btn1 hover">
+              <fa-icon
+                [icon]="faTimes"
+                [ngStyle]="{ color: 'red' }"
+                (click)="onDeleteExperiencia(item)"
+              ></fa-icon>
+            </button>
+            <button class="betene btn1 hover">
+              <i class="fas fa-pencil-alt"></i>
+            </button>
+          </div>
+      
           <img
             [src]="item.img"
             id="salud-icon"
@@ -31,6 +47,88 @@
           </div>
         </li>
       </ul>
+      
+    </div>
+  </div>
+</div>
+
+<!-- MODAL -->
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="experienciaModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="exampleModalLabel">
+          Agregue su nueva experiencia laboral:
+        </h3>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <div class="modal-body">
+        <!-- Cuerpo dentro del modal -->
+
+        <h5 class="modal-title" id="exampleModalLabel">Empresa:</h5>
+        <div class="input-group">
+          <input
+            type="text"
+            name="title"
+            id="title"
+            [(ngModel)]="newExp.title"
+            class="form-control"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+        <br />
+        <h5 class="modal-title" id="exampleModalLabel">Puesto:</h5>
+        <br />
+        <div class="input-group">
+          <input
+            type="text"
+            name="description"
+            id="description"
+            [(ngModel)]="newExp.description"
+            class="form-control"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+        <br />
+        <h5 class="modal-title" id="exampleModalLabel">Inicio - Final:</h5>
+        <div class="input-group">
+          <input
+            type="text"
+            name="time"
+            id="time"
+            [(ngModel)]="newExp.time"
+            class="form-control"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Close
+        </button>
+        <button
+          type="button"
+          (click)="addExperiencia(newExp)"
+          class="btn btn-success"
+          data-bs-dismiss="modal"
+        >
+          Add
+        </button>
+      </div>
     </div>
   </div>
 </div>
