--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -3,6 +3,7 @@
     font-size: 25px;
     margin: 0em 1.25em 0em 0.313em;
     text-align: center;
+    color: white;
 }
 
 .betene {
@@ -24,9 +25,9 @@
     text-transform: uppercase;
 }
 .btn1 {
-      background-color: white; 
-      color: black; 
-      border: 2px solid #008CBA;
+      background-color: black; 
+      color: white; 
+      border: 1px solid #008CBA;
 }
 .btn1:hover {
     background-color: #008CBA;
@@ -37,3 +38,9 @@
     margin-top: 0.625em;
 }
 
+#yoProgramo{
+    color: white;
+    margin-left: 5px;
+    margin-bottom: 0px;
+    font-family: 'Poppins', sans-serif;
+}
