--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,53 +1,89 @@
-<div *ngIf="!usuarioLogueado">
-  <!-- NavBar de Usuario NO-LOGUEADO -->
-
+<div>
   <!-- BARRA DE NAVEGACION -->
-  <nav id="navbar-example2" class="navbar navbar-light bg-light">
+  <nav id="navbar-example2" class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img
-          src="https://i.ibb.co/8dWqNMH/argprog.jpg"
+          src="../assets/img/newLogoAP.png"
           alt="logo"
-          width="30"
-          height="24"
+          width="150"
+          height="50"
           class="d-inline-block align-text-top"
         />
-        Argentina Programa - #YoProgramo
       </a>
+
 
       <!-- Navegador de secciones -->
 
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a href="#scrollspyHeadingAcercaDe">Acerca de</a>
+          <a  style="color: white" href="#scrollspyHeadingAcercaDe">Acerca de</a>
         </li>
         <li class="nav-item">
-          <a href="#scrollspyHeadingEdu">Educación</a>
+          <a style="color: white" href="#scrollspyHeadingEdu">Educación</a>
         </li>
         <li class="nav-item">
-          <a href="#scrollspyHeadingExp">Experiencia</a>
+          <a style="color: white" href="#scrollspyHeadingExp">Experiencia</a>
         </li>
         <li class="nav-item">
-          <a href="#scrollspyHeadingSkills">Skills</a>
+          <a style="color: white" href="#scrollspyHeadingSkills">Skills</a>
         </li>
       </ul>
 
-      <!-- MODAL -->
+      <form class="d-flex">
+                                          <!-- ICONOS Y LOGIN -->
+        <div id="mail-icon">
+          <a
+            type="button"
+            data-bs-toggle="modal"
+            data-bs-target="#mailContactModal"
+            class="betene btn1 hover"
+            ><i class="far fa-envelope"></i
+          ></a>
+        </div>
 
-      <!-- Button trigger modal -->
+        <div id="linkedin-icon">
+          <a
+            href="http://www.linkedin.com/in/lautaro-bogado-591582224/"
+            class="betene btn1 hover"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </div>
+
+        <div id="wpp-icon">
+          <a href="https://wa.me/5493624104545" class="betene btn1 hover"
+            ><i class="fab fa-whatsapp"></i
+          ></a>
+        </div>
+                                    <!-- Button trigger modal -->
       <button
-        type="button"
-        class="btn btn-success"
-        data-bs-toggle="modal"
-        data-bs-target="#exampleModal"
-      >
-        Login
-      </button>
+      *ngIf="!usuarioLogueado"
+      type="button"
+      class="btn btn-success"
+      data-bs-toggle="modal"
+      data-bs-target="#loginModal"
+    >
+      Login
+    </button>
 
-      <!-- Modal -->
+    <h5 *ngIf="usuarioLogueado" id="usuarioBienvenida">¡Bienvenido, {{ username }}!</h5>
+
+    <div *ngIf="usuarioLogueado" class="login-icon">
+      <button
+        (click)="desloguearUsuario()"
+        type="submit"
+        class="btn btn-danger"
+      >
+        Logout
+      </button>
+    </div>
+    </form>
+
+                                    <!-- MODAL DE INICIO DE SESION -->
+
       <div
         class="modal fade"
-        id="exampleModal"
+        id="loginModal"
         tabindex="-1"
         aria-labelledby="exampleModalLabel"
         aria-hidden="true"
@@ -64,7 +100,7 @@
               ></button>
             </div>
             <div class="modal-body">
-              <!-- Cuerpo dentro del modal -->
+                                            <!-- Cuerpo dentro del modal -->
               <h5 class="modal-title" id="exampleModalLabel">
                 Ingrese su usuario:
               </h5>
@@ -122,100 +158,26 @@
   </nav>
 </div>
 
-<div *ngIf="usuarioLogueado">
-  <!-- NavBar de Usuario LOGUEADO -->
+                                    <!-- MODAL DE INICIO DE SESION -->
 
-  <!-- BARRA DE NAVEGACION -->
-  <nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img
-          src="https://i.ibb.co/8dWqNMH/argprog.jpg"
-          alt="logo"
-          width="30"
-          height="24"
-          class="d-inline-block align-text-top"
-        />
-        Argentina Programa - #YoProgramo
-      </a>
-
-      <!-- Navegador de secciones -->
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a href="#scrollspyHeadingAcercaDe">Acerca de</a>
-        </li>
-        <li class="nav-item">
-          <a href="#scrollspyHeadingEdu">Educación</a>
-        </li>
-        <li class="nav-item">
-          <a href="#scrollspyHeadingExp">Experiencia</a>
-        </li>
-        <li class="nav-item">
-          <a href="#scrollspyHeadingSkills">Skills</a>
-        </li>
-      </ul>
-
-      <form class="d-flex">
-        <!-- ICONOS Y LOGIN -->
-
-        <div id="mail-icon">
-          <a
-            type="button"
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
-            class="betene btn1 hover"
-            ><i class="far fa-envelope"></i
-          ></a>
-        </div>
-
-        <div id="linkedin-icon">
-          <a
-            href="http://www.linkedin.com/in/lautaro-bogado-591582224/"
-            class="betene btn1 hover"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-        </div>
-
-        <div id="wpp-icon">
-          <a href="https://wa.me/5493624104545" class="betene btn1 hover"
-            ><i class="fab fa-whatsapp"></i
-          ></a>
-        </div>
-
-        <h5 id="usuarioBienvenida">¡Bienvenido, {{ username }}!</h5>
-
-        <div class="login-icon">
-          <button
-            (click)="desloguearUsuario()"
-            type="submit"
-            class="btn btn-danger"
-          >
-            Logout
-          </button>
-        </div>
-
-        <!-- MODAL -->
-
-        <!-- Button trigger modal -->
-        <!-- Modal -->
-        <div
-          class="modal fade"
-          id="exampleModal"
-          tabindex="-1"
-          aria-labelledby="exampleModalLabel"
-          aria-hidden="true"
-        >
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-body">
-                <!-- Cuerpo dentro del modal -->
-
-                <app-contact-form></app-contact-form>
-              </div>
+      <div
+        class="modal fade"
+        id="mailContactModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
             </div>
-          </div>
-        </div>
-      </form>
-    </div>
-  </nav>
-</div>
+            <div class="modal-body">
+              <app-contact-form></app-contact-form>
+            </div>
+
