--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -1,3 +1,87 @@
+  /*barras*/
+
+  .contiene-progres{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.progres{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.box{
+    position: relative;
+    width:200px;
+    height:200px;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    flex-direction: column;
+    background:rgba(85, 81, 87,50%);
+    box-shadow: 0 30px 60px rgba(0,0,0,.2);
+    border-radius: 50%;
+    border: 2px solid black
+}
+.box .percent{
+    position: relative;
+    width:150px;
+    height: 150px;
+}
+.box .percent svg{
+    display: flex;
+    align-items: center;
+    width:160px;
+    height: 160px;
+}
+.box .percent svg circle{
+    width:160px;
+    height: 160px;
+    fill:none;
+    stroke-width: 12;
+    stroke:#000 ;
+    transform:translate(7px,7px);
+    stroke-dasharray: 314;
+    /*stroke-dashoffset: 360;
+    stroke-linecap: round;*/
+}
+.box .prog1 svg circle:nth-child(1){
+    stroke-dashoffset: 0;
+    stroke:#95f8f8;
+}
+/*
+.box .prog1 svg circle:nth-child(2){
+    stroke-dashoffset: calc(314 - ((50 * 314)/100));
+    stroke:#c70909;
+}*/
+
+.box .percent .number{
+    position: absolute;
+    top:0;
+    left: 0;
+    width:100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#111;
+}
+.box .percent .number h2{
+    font-size: 48px;
+}
+.box .percent .number h2 span{
+    font-size: 24px;
+}
+.box .text {
+    padding: 10px 0 0 ;
+    color:#999;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
 .contiene-progres{
     margin-top: 15px;
     display: flex;
@@ -35,7 +119,7 @@
 
 
 
-#exp-edit{
+#sk-edit{
     display: flex;
     align-items: center;
     position: absolute;
@@ -44,10 +128,15 @@
 
 }
 
-#exp-plus{
+#sk-plus{
     display: flex;
     align-items: center;
     position: absolute;
     right: 50px;
     top: 5px;
+}
+
+#skill-item-card{
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
