--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
   <app-educacion></app-educacion>
   <app-experiencia></app-experiencia>
   <app-skills></app-skills>
+  <app-proyects></app-proyects>
 </div>
