--- a/src/app/components/proyects/proyects.component.css
+++ b/src/app/components/proyects/proyects.component.css
@@ -1,3 +1,13 @@
-#carouselExampleCaptions{
-    margin: auto
+#proyects-box{
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 4);
+    position: relative;
+}
+.contiene-proyects{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
