--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -1,38 +1,22 @@
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="width: 65em; height: 50em">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../assets/img/negro.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/img/negro.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/img/negro.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
+<div
+  id="proyects-box"
+  class="card border-dark mb-3 contiene-progres"
+  style="max-width: 80rem"
+>
+
+<h4 id="scrollspyHeadingPro" class="title">Mis Proyectos:</h4>
+
+<div class="row">
+  <div class="col-sm-4" *ngFor="let proyect of proyectsInfo">
+    <div class="card">
+      <img [src]="proyect.img" class="card-img-top" alt="..." style=" width: 20em">
+      <div class="card-body">
+        <h5 class="card-title">{{proyect.title}}</h5>
+        <p class="card-text">{{proyect.description}}</p>
+        <a href="#" class="btn btn-primary">Échale un vistazo!</a>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
+</div>
+
+</div>
