--- a/src/app/components/skills/skills.component.css
+++ b/src/app/components/skills/skills.component.css
@@ -140,3 +140,11 @@
     margin-top: 60px;
     margin-bottom: 30px;
 }
+
+.contiene-progress{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
