--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -51,6 +51,7 @@
         </ul>
   
 </div>  
+
 <!-- MODAL -->
 <!-- Modal -->
 <div
@@ -60,7 +61,7 @@
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
 >
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title" id="exampleModalLabel">
@@ -142,7 +143,7 @@
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
 >
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title" id="exampleModalLabel">
@@ -205,6 +206,7 @@
           Close
         </button>
         <button
+        *ngIf="eduSelected" 
         (click)="onUpdate()"
           type="button"
           class="btn btn-success"
