--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@
     width: 9.375em;
     height: 9.375em;
     background: black;
-    box-shadow: 0 0 3px 3px rgba(8, 8, 118, 4);
+    box-shadow: 0 0 3px 3px black;
     position: absolute;
     margin-top: 15em;
     margin-left: 3.438em;
